force-app/main/default/objects/OrderItem/fields/Account_Discount__c.field-meta.xml
<CustomField>
    <fullName>Account_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount</label>
    <referenceTo>Account_Discount__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>