force-app/main/default/objects/OrderItem/fields/AD_KG__c.field-meta.xml
<CustomField>
    <fullName>AD_KG__c</fullName>
    <formula>IF(
    /* First condition: Delivery Date is less than 22/09/2024 */
    Order.Delivery_Date__c &lt; DATE(2024, 9, 22),
    /* Use the original logic */
    IF(
        NOT(ISNULL(AD_KG_from_Weights__c)),
        AD_KG_from_Weights__c,
        Quantity * PricebookEntry.Product2.AD_KG__c
    ),

    /* Second condition: Delivery Date is on or after 22/09/2024 */
    IF(
        /* Check if AD_KG_from_Weights__c is greater than 0 */
        AD_KG_from_Weights__c &gt; 0,
        AD_KG_from_Weights__c,

        /* If AD_KG_from_Weights__c is blank or zero, apply Fall_Back_Weight_Type__c logic */
        IF(
            TEXT(Order.Account.Fall_Back_Weight_Type__c) = &quot;No Weight&quot;,
            /* Fall Back Weight Type is &quot;No Weight&quot; */
            0,

            IF(
                /* Check if it&apos;s a Company Average Weight and AD_KG__c &gt; 0 */
                TEXT(Order.Account.Fall_Back_Weight_Type__c) = &quot;Company Average Weight&quot; 
                &amp;&amp; PricebookEntry.Product2.AD_KG__c &gt; 0,
                /* Apply Company Average Weight if AD_KG__c is greater than 0 */
                Quantity * PricebookEntry.Product2.Estimated_Weight__c,

                /* Default value if none of the conditions match */
                Quantity * PricebookEntry.Product2.AD_KG__c
            )
        )
    )
)</formula>
    <label>AD KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>