force-app/main/default/objects/OrderItem/fields/AD_KG_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>AD_KG_Order_Line__c</fullName>
    <formula>AD_KG_Per_Unit__c* Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>AD KG per unit multiplied by quantity on the order line</inlineHelpText>
    <label>AD KG Order Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>