force-app/main/default/objects/OrderItem/fields/AllowedWeight__c.field-meta.xml
<CustomField>
    <fullName>AllowedWeight__c</fullName>
    <label>Allowed Weight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>