force-app/main/default/objects/OrderItem/fields/Can_KG_DMR__c.field-meta.xml
<CustomField>
    <fullName>Can_KG_DMR__c</fullName>
    <formula>IF( productcategory__c = &quot;Mixed Recycling&quot;,  Recycled_KG_Order_Line__c *  Order.Account.Percent_Cans_DMR__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can KG DMR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>