force-app/main/default/objects/OrderItem/fields/Case_Safe_Order_product_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Order_product_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Order product ID</label>
    <type>Text</type>
</CustomField>