force-app/main/default/objects/OrderItem/fields/Coffe_KG_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Coffe_KG_Order_Line__c</fullName>
    <formula>Coffee_KG_Per_Unit__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coffee KG Order Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>