force-app/main/default/objects/OrderItem/fields/Coffee_KG__c.field-meta.xml
<CustomField>
    <fullName>Coffee_KG__c</fullName>
    <formula>IF(NOT(ISNULL(Coffee_KG_from_Weights__c)), Coffee_KG_from_Weights__c, Quantity * PricebookEntry.Product2.Coffee_KG__c)</formula>
    <label>Coffee KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>