force-app/main/default/objects/OrderItem/fields/Coffee_KG_from_Weights__c.field-meta.xml
<CustomField>
    <fullName>Coffee_KG_from_Weights__c</fullName>
    <label>Coffee KG from Weights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>