force-app/main/default/objects/OrderItem/fields/Coffee_KG_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Coffee_KG_Per_Unit__c</fullName>
    <formula>PricebookEntry.Product2.Coffee_KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coffee KG Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>