force-app/main/default/objects/OrderItem/fields/Collection_manual_price__c.field-meta.xml
<CustomField>
    <fullName>Collection_manual_price__c</fullName>
    <formula>Collection_Waypoint__r.Manual_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection manual price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>