force-app/main/default/objects/OrderItem/fields/cp_orderline_id__c.field-meta.xml
<CustomField>
    <fullName>cp_orderline_id__c</fullName>
    <label>cp_orderline_id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>