force-app/main/default/objects/OrderItem/fields/Created_By_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Full_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By Full Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>