force-app/main/default/objects/OrderItem/fields/Credit_Note_line__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Note line</label>
    <type>Checkbox</type>
</CustomField>