force-app/main/default/objects/OrderItem/fields/Date_Enqix_Product_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Enqix_Product_Created__c</fullName>
    <formula>PricebookEntry.Product2.TimeStamp_Insert__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Enqix Product Created</label>
    <type>Date</type>
</CustomField>