force-app/main/default/objects/OrderItem/fields/DD_Discount__c.field-meta.xml
<CustomField>
    <fullName>DD_Discount__c</fullName>
    <label>DD Discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>