force-app/main/default/objects/OrderItem/fields/Delivery_date_for_supp__c.field-meta.xml
<CustomField>
    <fullName>Delivery_date_for_supp__c</fullName>
    <formula>IF ( Is_supplier_order_product__c = TRUE, Order.Requested_Delivery_Date__c, null )</formula>
    <label>Delivery date for supplier</label>
    <type>Date</type>
</CustomField>