force-app/main/default/objects/OrderItem/fields/Delivery_date_for_supplier__c.field-meta.xml
<CustomField>
    <fullName>Delivery_date_for_supplier__c</fullName>
    <label>Delivery date for supplier</label>
    <type>Date</type>
</CustomField>