force-app/main/default/objects/OrderItem/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Delivery_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Type</label>
    <type>Text</type>
</CustomField>