force-app/main/default/objects/OrderItem/fields/DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStatus__c</fullName>
    <formula>text(Order.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeliveryStatus</label>
    <type>Text</type>
</CustomField>