force-app/main/default/objects/OrderItem/fields/detrack_Qrcode__c.field-meta.xml
<CustomField>
    <fullName>detrack_Qrcode__c</fullName>
    <label>DEtrack QR Code</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>