force-app/main/default/objects/OrderItem/fields/DetrackStatus__c.field-meta.xml
<CustomField>
    <fullName>DetrackStatus__c</fullName>
    <formula>text(Order.Detrack_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DetrackStatus</label>
    <type>Text</type>
</CustomField>