force-app/main/default/objects/OrderItem/fields/direct_debit_discount__c.field-meta.xml
<CustomField>
    <fullName>direct_debit_discount__c</fullName>
    <label>direct debit discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>