force-app/main/default/objects/OrderItem/fields/Direct_Debit_discount_amount__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_discount_amount__c</fullName>
    <formula>IF(ISNULL(Discount__c), (ListPrice__c - Partner_Discount__c) * direct_debit_discount__c, (ListPrice__c - Discount__c) * direct_debit_discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Debit discount amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>