force-app/main/default/objects/OrderItem/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Account Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>