force-app/main/default/objects/OrderItem/fields/Discount_or_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Discount_or_Supplement__c</fullName>
    <label>Discount or Supplement?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>