force-app/main/default/objects/OrderItem/fields/Enqix_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Order_Item_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Enqix_Order_Item_Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>