force-app/main/default/objects/OrderItem/fields/Enqix_UserId_LastChange__c.field-meta.xml
<CustomField>
    <fullName>Enqix_UserId_LastChange__c</fullName>
    <label>Enqix UserId LastChange</label>
    <length>10</length>
    <type>Text</type>
</CustomField>