force-app/main/default/objects/OrderItem/fields/EnqixBIDId__c.field-meta.xml
<CustomField>
    <fullName>EnqixBIDId__c</fullName>
    <label>EnqixBIDId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>