force-app/main/default/objects/OrderItem/fields/ExpectedQrCodeCount__c.field-meta.xml
<CustomField>
    <fullName>ExpectedQrCodeCount__c</fullName>
    <formula>Quantity / Product2.Quantity_Sold_In__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected QR Code Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>