force-app/main/default/objects/OrderItem/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <formula>Order.Account.External_Unique_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External ID</label>
    <type>Text</type>
</CustomField>