force-app/main/default/objects/OrderItem/fields/FeeDealNo__c.field-meta.xml
<CustomField>
    <fullName>FeeDealNo__c</fullName>
    <description>Fee Deal No as defined in the Enqix System.</description>
    <inlineHelpText>Fee Deal No as defined in the Enqix System.</inlineHelpText>
    <label>Fee Deal No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>