force-app/main/default/objects/OrderItem/fields/IncludeFuelSurcharge__c.field-meta.xml
<CustomField>
    <fullName>IncludeFuelSurcharge__c</fullName>
    <formula>AND($Setup.FuelSurchargeSetting__c.IsActive__c, Product2.IncludeFuelSurcharge__c, NOT(Order.Account.IsFuelSurchargeExemptLocation__c), NOT(BEGINS(CreatedBy.Username, &apos;optimizely.integration@thefirstmile.co.uk&apos;)))</formula>
    <label>Include Fuel Surcharge?</label>
    <type>Checkbox</type>
</CustomField>