force-app/main/default/objects/OrderItem/fields/Is_supplier_Order_Prod__c.field-meta.xml
<CustomField>
    <fullName>Is_supplier_Order_Prod__c</fullName>
    <formula>NOT(OR( ISNULL( Supplier__c ) , CONTAINS( Supplier__c , &quot;First Mile&quot;)))</formula>
    <label>Is supplier Order Product</label>
    <type>Checkbox</type>
</CustomField>