force-app/main/default/objects/OrderItem/fields/Is_supplier_order_product__c.field-meta.xml
<CustomField>
    <fullName>Is_supplier_order_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is supplier order product?</label>
    <type>Checkbox</type>
</CustomField>