force-app/main/default/objects/OrderItem/fields/IsChargeVariableWeight__c.field-meta.xml
<CustomField>
    <fullName>IsChargeVariableWeight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Variable Weight?</label>
    <type>Checkbox</type>
</CustomField>