force-app/main/default/objects/OrderItem/fields/IsCollection__c.field-meta.xml
<CustomField>
    <fullName>IsCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collection?</label>
    <type>Checkbox</type>
</CustomField>