force-app/main/default/objects/OrderItem/fields/IsDeliveryByExternalCarrier__c.field-meta.xml
<CustomField>
    <fullName>IsDeliveryByExternalCarrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery By External Carrier?</label>
    <type>Checkbox</type>
</CustomField>