force-app/main/default/objects/OrderItem/fields/IsExternalSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsExternalSupplier__c</fullName>
    <formula>AND(NOT(ISBLANK(Supplier__c)), Supplier__r.IsExternal__c)</formula>
    <label>External Supplier</label>
    <type>Checkbox</type>
</CustomField>