force-app/main/default/objects/OrderItem/fields/IsFuelSurchargeEvaluated__c.field-meta.xml
<CustomField>
    <fullName>IsFuelSurchargeEvaluated__c</fullName>
    <formula>Order.IsFuelSurchargeEvaluated__c</formula>
    <label>Fuel Surcharge Evaluated?</label>
    <type>Checkbox</type>
</CustomField>