force-app/main/default/objects/OrderItem/fields/IsQrCodeEnforced__c.field-meta.xml
<CustomField>
    <fullName>IsQrCodeEnforced__c</fullName>
    <formula>Product2.IsQrCodeEnforced__c</formula>
    <label>Enforce QR Code</label>
    <type>Checkbox</type>
</CustomField>