force-app/main/default/objects/OrderItem/fields/IsVariableBilling__c.field-meta.xml
<CustomField>
    <fullName>IsVariableBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Variable Billing?</label>
    <type>Checkbox</type>
</CustomField>