force-app/main/default/objects/OrderItem/fields/IsVATExemptProduct__c.field-meta.xml
<CustomField>
    <fullName>IsVATExemptProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Exempt Product?</label>
    <type>Checkbox</type>
</CustomField>