force-app/main/default/objects/OrderItem/fields/KWH_Produced__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced__c</fullName>
    <formula>IF(NOT(ISNULL(KWH_Produced_from_Weights__c)), KWH_Produced_from_Weights__c, WTE_KG__c * PricebookEntry.Product2.KWH_Produced_Per_KG__c)</formula>
    <label>KWH Produced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>