force-app/main/default/objects/OrderItem/fields/KWH_Produced_from_Weights__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced_from_Weights__c</fullName>
    <label>KWH Produced from Weights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>