force-app/main/default/objects/OrderItem/fields/KWH_Produced_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced_Order_Line__c</fullName>
    <formula>KWH_Produced_Per_Unit__c*Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>KWH Produced Per unit, multiplied by quantity ordered</inlineHelpText>
    <label>KWH Produced Order Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>