force-app/main/default/objects/OrderItem/fields/KWH_Produced_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced_Per_Unit__c</fullName>
    <formula>PricebookEntry.Product2.KWH_Produced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KWH Produced Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>