force-app/main/default/objects/OrderItem/fields/LastWeightModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastWeightModifiedDate__c</fullName>
    <label>Last Weight Modified Date</label>
    <type>Date</type>
</CustomField>