force-app/main/default/objects/OrderItem/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <description>The List Price for a single product as defined by Unit_Price in the Enqix System.</description>
    <inlineHelpText>The List Price for a single product as defined by Unit_Price in the Enqix System.</inlineHelpText>
    <label>List Price__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>