force-app/main/default/objects/OrderItem/fields/ListPrice_Diff__c.field-meta.xml
<CustomField>
    <fullName>ListPrice_Diff__c</fullName>
    <formula>IF( ListPrice  &lt;&gt;  ListPrice__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ListPrice Diff</label>
    <type>Checkbox</type>
</CustomField>