force-app/main/default/objects/OrderItem/fields/Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_ID__c</fullName>
    <formula>CASESAFEID(Order.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location ID</label>
    <type>Text</type>
</CustomField>