force-app/main/default/objects/OrderItem/fields/OrderDeliveryAccount__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryAccount__c</fullName>
    <formula>Order.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDeliveryAccount</label>
    <type>Text</type>
</CustomField>