force-app/main/default/objects/OrderItem/fields/OrderDeliveryAddress1__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryAddress1__c</fullName>
    <formula>Order.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDeliveryAddress1</label>
    <type>Text</type>
</CustomField>