force-app/main/default/objects/OrderItem/fields/OrderDeliveryAddress2__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryAddress2__c</fullName>
    <formula>Order.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDeliveryAddress2</label>
    <type>Text</type>
</CustomField>