force-app/main/default/objects/OrderItem/fields/OrderDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryAddress__c</fullName>
    <formula>Order.ShippingStreet&amp; &quot;, &quot;&amp; Order.ShippingCity &amp; &quot;, &quot; &amp;Order.ShippingState &amp; &quot;, &quot; &amp; Order.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDeliveryAddress</label>
    <type>Text</type>
</CustomField>