force-app/main/default/objects/OrderItem/fields/OrderDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryDate__c</fullName>
    <formula>Order.Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDeliveryDate</label>
    <type>Date</type>
</CustomField>