force-app/main/default/objects/OrderItem/fields/OrderDeliveryNo__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryNo__c</fullName>
    <formula>Order.Enqix_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDeliveryNo</label>
    <type>Text</type>
</CustomField>