force-app/main/default/objects/OrderItem/fields/OrderDeliveryPostcode__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryPostcode__c</fullName>
    <formula>Order.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDeliveryPostcode</label>
    <type>Text</type>
</CustomField>