force-app/main/default/objects/OrderItem/fields/OrderDeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryStatus__c</fullName>
    <formula>Order.Delivery_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderDeliveryStatus</label>
    <type>Text</type>
</CustomField>