force-app/main/default/objects/OrderItem/fields/OrderProduct2_ID__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct2_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID from respective Order Product 2</description>
    <label>OrderProduct2 ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>