force-app/main/default/objects/OrderItem/fields/OrderRequestedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>OrderRequestedDeliveryDate__c</fullName>
    <formula>Order.Requested_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderRequestedDeliveryDate</label>
    <type>Date</type>
</CustomField>