force-app/main/default/objects/OrderItem/fields/Overriding_Acc_Discount_amount__c.field-meta.xml
<CustomField>
    <fullName>Overriding_Acc_Discount_amount__c</fullName>
    <formula>IF(ISNULL(Discount__c), (ListPrice__c -  Partner_Discount__c) * Overriding_Account_discount__c, (ListPrice__c -  Discount__c) * Overriding_Account_discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overriding Acc Discount amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>