force-app/main/default/objects/OrderItem/fields/Overriding_Account_discount__c.field-meta.xml
<CustomField>
    <fullName>Overriding_Account_discount__c</fullName>
    <label>Overriding Account discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>