force-app/main/default/objects/OrderItem/fields/Overweight__c.field-meta.xml
<CustomField>
    <fullName>Overweight__c</fullName>
    <label>Overweight</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>