force-app/main/default/objects/OrderItem/fields/OverweightInvoiced__c.field-meta.xml
<CustomField>
    <fullName>OverweightInvoiced__c</fullName>
    <label>Overweight Invoiced</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>