force-app/main/default/objects/OrderItem/fields/OverweightToInvoice__c.field-meta.xml
<CustomField>
    <fullName>OverweightToInvoice__c</fullName>
    <formula>MAX(Overweight__c - OverweightInvoiced__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overweight To Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>