force-app/main/default/objects/OrderItem/fields/Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount__c</fullName>
    <label>Partner Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>