force-app/main/default/objects/OrderItem/fields/Partner_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Partner_Total_Price__c</fullName>
    <formula>IF(Partner_Unit_Price__c = null, null, Partner_Unit_Price__c *  Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>