force-app/main/default/objects/OrderItem/fields/Partner_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Partner_Unit_Price__c</fullName>
    <label>Partner Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>