force-app/main/default/objects/OrderItem/fields/PartnershipID__c.field-meta.xml
<CustomField>
    <fullName>PartnershipID__c</fullName>
    <formula>Order.Account.Partnership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PartnershipID</label>
    <type>Text</type>
</CustomField>