force-app/main/default/objects/OrderItem/fields/PartnerVATRate__c.field-meta.xml
<CustomField>
    <fullName>PartnerVATRate__c</fullName>
    <label>Partner VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>