force-app/main/default/objects/OrderItem/fields/Post_code_for_supplier__c.field-meta.xml
<CustomField>
    <fullName>Post_code_for_supplier__c</fullName>
    <label>Post code for supplier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>