force-app/main/default/objects/OrderItem/fields/productcategory__c.field-meta.xml
<CustomField>
    <fullName>productcategory__c</fullName>
    <formula>PricebookEntry.Product2.Product_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRoduct Category</label>
    <type>Text</type>
</CustomField>