force-app/main/default/objects/OrderItem/fields/ProductDiscount__c.field-meta.xml
<CustomField>
    <fullName>ProductDiscount__c</fullName>
    <description>Product Discount as defined in the Enqix System.</description>
    <inlineHelpText>Product Discount as defined in the Enqix System.</inlineHelpText>
    <label>Product Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>