force-app/main/default/objects/OrderItem/fields/ProductSupplement__c.field-meta.xml
<CustomField>
    <fullName>ProductSupplement__c</fullName>
    <description>Product Supplement as defined in the Enqix System.</description>
    <inlineHelpText>Product Supplement as defined in the Enqix System.</inlineHelpText>
    <label>Product Supplement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>