force-app/main/default/objects/OrderItem/fields/Quantity_Sold_In__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sold_In__c</fullName>
    <label>Quantity Sold In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>