force-app/main/default/objects/OrderItem/fields/Quantity_Value__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Value__c</fullName>
    <label>Quantity Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>